add: adicao dos testes unitarios iniciais do product service